<resources>
    <string name="app_name">Beer Delivery</string>


    <string name="default_notification_channel_id">31</string>


    <string name="app_vr">v.2.1</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Выход из программы</string>


    <string name="title_activity_registration_driver">kk</string>

    <string name="title_activity_restore_dostup">Регистрация</string>
    <string name="tv.reg.input.phone">Введите ваш 11-значный номер телефона</string>
    <string name="tv.reg.input.sms.code">Введите код полученный в СМС</string>

    <string name="err.msg.car.brend">Введите марку вашей машины</string>
    <string name="err.msg.car.color">Введите цвет вашей машины</string>
    <string name="err.msg.car.number">Введите регистрационный номер вашей машины</string>
    <string name="err.msg.sms.code">Введите 4-x значный код из СМС</string>
    <string name="err.msg.phone">Проверьте правильность набора номера</string>

    <string name="hint_name">Full Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="err_msg_name">Введите ваше Имя</string>
    <string name="err_msg_famaly">Введите вашу Фамилию</string>

    <string name="title_activity_choose_city">Выбор города:</string>
    <string name="title_activity_browse_free_orders">Обзор заказов</string>
    <string name="title_activity_taxometr">Таксометр</string>
    <string name="title_activity_browse_taken_orders">Взятые заказы</string>
    <string name="title_activity_browse_advance_orders">Предварительные заказы</string>
    <string name="title_activity_activity_for_result_bad_driver_mes">Причина отказа:</string>
    <string name="title_activity_activity_for_result_driver_status">Выбор статуса:</string>
    <string name="title_activity_activity_for_result_trip_info">Чек:</string>
    <string name="title_activity_login_driver">Вход:</string>

    <string name="title_activity_driver_info">Личные данные</string>
    <string name="title_activity_payment">Финансы</string>
    <string name="title_activity_robot_dialog">robotDialog</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="company_name">
        <item>Выберите вашу компанию и город</item>
        <item>Казань (ТК - 16)</item>

    </string-array>

    <string-array name="company_url">
        <item>0</item>
        <item>http://tk-16.ru</item>

    </string-array>
    <string name="title_activity_upload_foto">Загрузка фото</string>
    <string name="title_activity_old_orders">Обзор заказов</string>

    <!--***********************************-->

    <string name="manager">Менеджер</string>
    <string name="manual">Вручную</string>
    <string name="menu">Меню</string>
    <string name="navigation">Навигация:</string>
    <string name="near_the_client">Прибыл к клиенту</string>
    <string name="newOrder">Новые заказы</string>
    <string name="newOrders">Новые заказы</string>
    <string name="newReport">Новое обращение</string>
    <string name="news">Новости</string>
    <string name="orderWithId">Заказ №</string>
    <string name="order_history">История заказов</string>
    <string name="order_search">Поиск заказов...</string>
    <string name="order_search_time">Ориентировочное время - 5 минут</string>
    <string name="orders">Заказы</string>

    <string name="iconFinance"></string>
    <string name="iconTakenOrders"></string>
    <string name="iconNewOrder"></string>
    <string name="iconCompleted"></string>
    <string name="iconChat"></string>
    <string name="iconServices"></string>

    <string name="dispetcher">Диспетчер</string>
    <string name="driver_license_text">Водительское удостоверение:</string>
    <string name="driver_text">Водитель</string>
    <string name="enter">Перейти</string>
    <string name="enter_amount">Сумма пополнения баланса</string>
    <string name="exit">Выход</string>
    <string name="fcm_fallback_notification_channel_label">Miscellaneous</string>
    <string name="finance">Финансы</string>
    <string name="finishedOrder">Взятые заказы</string>

    <string name="accept">Принять</string>
    <string name="account">Личный кабинет</string>
    <string name="account_settings">Настройки аккаунта</string>
    <string name="activeOrder">Активный заказ</string>
    <string name="activeOrderPoint">Место отправление</string>
    <string name="add_service">Дополнительные услуги:</string>

    <string name="start">Продолжить</string>
    <string name="start_move">Начал движение</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="stop_move">Закончил движение</string>
    <string name="submit">Выбрать</string>
    <string name="completed_orders">Завершенные заказы</string>
    <string name="chat_button">Чат с диспетчером</string>
    <string name="useful_services">Полезные сервисы</string>
    <string name="take_order">Взять заказ</string>
    <string name="tarif">Тариф</string>
    <string name="tarif_busines">Бизнес</string>
    <string name="tarif_comfort">Комфорт</string>
    <string name="tarif_ekonom">Эконом</string>
    <string name="decline">Отклонить</string>

    <string name="balance">Баланс</string>
    <string name="topupbalance">Пополнить баланс</string>
    <string name="auth">Авторизация</string>
    <string name="select_navigation_point">Выберите навигацию</string>
    <string name="commission">Комиссия сервиса</string>

    <!--Location tracking activity permission toasts-->
    <string name="user_location_permission_explanation">This app needs location permissions in order to show its functionality.</string>
    <string name="user_location_permission_not_granted">You didn\'t grant location permissions.</string>
    <string name="access_token">pk.eyJ1IjoidHVtZW8xMjMiLCJhIjoiY2szeWlvYTg0MDh2ajNscGE2a3lodnJzbiJ9.PaBMOrBA8LGoy8V2FPQ9cg</string>

    <string name="sign_out">Sign Out</string>
    <string name="chat">Чат</string>
    <string name="write_message_hint">Напишите сообщение</string>
    <string name="send">Отправить</string>


</resources>
