<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:background="@color/grayWhite" android:layout_width="match_parent" android:layout_height="match_parent">
    <androidx.appcompat.widget.Toolbar android:id="@+id/toolbar" android:background="@color/colorAccent" android:layout_width="match_parent" android:layout_height="?attr/actionBarSize" app:popupTheme="@style/ThemeOverlay.AppCompat.Light" app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" app:title="@string/menu" app:titleTextColor="@color/white">
        <ImageButton android:layout_gravity="end" android:id="@+id/logoutButton" android:background="@drawable/ic_logout" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="13dp"/>
    </androidx.appcompat.widget.Toolbar>
    <View android:background="@drawable/toolbar_dropshadow" android:layout_width="match_parent" android:layout_height="5dp"/>
    <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:textSize="24dp" android:textColor="@color/colorAccent" android:id="@+id/userName" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:layout_marginBottom="27dp" android:maxWidth="250dp" android:layout_weight="1" android:layout_marginStart="16dp"/>
        <Switch android:id="@+id/onlineOfflineSwitch" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:layout_marginBottom="27dp" android:minHeight="32dp" android:thumb="@drawable/thumb_on_off" android:layout_weight="1" android:track="@drawable/switch_on_off" android:switchMinWidth="93dp" android:layout_marginEnd="16dp"/>
    </LinearLayout>
    <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@+id/activeOrder" android:visibility="gone" android:layout_width="match_parent" android:layout_height="200dp" android:layout_marginBottom="10dp">
        <androidx.cardview.widget.CardView android:layout_width="match_parent" android:layout_height="160dp" app:cardBackgroundColor="@color/white" app:cardElevation="10dp">
            <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent">
                <TextView android:textSize="14dp" android:textColor="@color/colorAccent" android:id="@+id/activeOrderText" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="16dp" android:text="@string/activeOrder" android:layout_weight="1"/>
                <TextView android:textSize="14dp" android:textColor="@color/darkGrey" android:id="@+id/activeOrderDeadlineText" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="16dp" android:layout_weight="1" android:textAlignment="viewEnd"/>
            </LinearLayout>
            <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginTop="37dp">
                <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="16dp">
                    <TextView android:textSize="12dp" android:textColor="@color/darkGrey" android:id="@+id/activeOrderPointText" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/activeOrderPoint" android:layout_weight="1"/>
                    <TextView android:textSize="14dp" android:textColor="@color/colorAccent" android:ellipsize="end" android:id="@+id/activeOrderAddressText" android:layout_width="wrap_content" android:layout_height="wrap_content" android:maxWidth="260dp" android:singleLine="true" android:layout_weight="1"/>
                </LinearLayout>
                <TextView android:textSize="24dp" android:textColor="@color/colorAccent" android:id="@+id/activeOrderCostText" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_margin="16dp" android:layout_weight="1" android:textAlignment="viewEnd"/>
            </LinearLayout>
            <androidx.cardview.widget.CardView android:layout_gravity="bottom" android:id="@+id/activeOrderEnterBtn" android:layout_width="match_parent" android:layout_height="42dp" android:layout_marginLeft="15dp" android:layout_marginRight="15dp" android:layout_marginBottom="13dp" app:cardBackgroundColor="@color/lightBlue" app:cardElevation="3dp">
                <TextView android:textSize="14dp" android:textColor="@color/white" android:gravity="center" android:id="@+id/activeOrderEnterText" android:layout_width="match_parent" android:layout_height="match_parent" android:text="@string/start" android:textScaleX="1.0357" android:textAllCaps="true"/>
            </androidx.cardview.widget.CardView>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="1">
        <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="0dp" android:layout_marginBottom="8dp" android:layout_weight="1">
            <androidx.cardview.widget.CardView android:id="@+id/btnOrders" android:layout_width="0dp" android:layout_height="match_parent" android:layout_marginLeft="8dp" android:layout_marginRight="4dp" android:layout_weight="1" app:cardBackgroundColor="@color/lightBlue" app:cardCornerRadius="10dp" app:cardElevation="0dp">
                <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
                    <TextView android:textSize="36dp" android:textColor="@color/white" android:gravity="center" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="10dp" android:text="" android:fontFamily="@font/font_awesome"/>
                    <TextView android:textSize="14dp" android:textColor="@color/white" android:gravity="center" android:id="@+id/newOrdersText" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/newOrder"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView android:id="@+id/btnFinishedOrders" android:layout_width="0dp" android:layout_height="match_parent" android:layout_marginLeft="4dp" android:layout_marginRight="8dp" android:layout_weight="1" app:cardBackgroundColor="@color/lightBlue" app:cardCornerRadius="10dp" app:cardElevation="0dp">
                <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
                    <TextView android:textSize="36dp" android:textColor="@color/white" android:gravity="center" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="10dp" android:text="@string/iconFinishedOrder" android:fontFamily="@font/font_awesome"/>
                    <TextView android:textSize="14dp" android:textColor="@color/white" android:gravity="center" android:id="@+id/finishedOrdersText" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/finishedOrder"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="0dp" android:layout_marginBottom="8dp" android:layout_weight="1">
            <androidx.cardview.widget.CardView android:id="@+id/btnMoney" android:layout_width="0dp" android:layout_height="match_parent" android:layout_marginLeft="8dp" android:layout_marginRight="4dp" android:layout_weight="1" app:cardBackgroundColor="@color/lightBlue" app:cardCornerRadius="10dp" app:cardElevation="0dp">
                <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
                    <TextView android:textSize="36dp" android:textColor="@color/white" android:gravity="center" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="10dp" android:text="@string/iconFinance" android:fontFamily="@font/font_awesome"/>
                    <TextView android:textSize="14dp" android:textColor="@color/white" android:gravity="center" android:id="@+id/moneyText" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/finance"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView android:id="@+id/btnSupport" android:layout_width="0dp" android:layout_height="match_parent" android:layout_marginLeft="4dp" android:layout_marginRight="8dp" android:layout_weight="1" app:cardBackgroundColor="@color/blue" app:cardCornerRadius="10dp" app:cardElevation="0dp">
                <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
                    <TextView android:textSize="36dp" android:textColor="@color/white" android:gravity="center" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="10dp" android:text="@string/iconSupport" android:fontFamily="@font/font_awesome"/>
                    <TextView android:textSize="14dp" android:textColor="@color/white" android:gravity="center" android:id="@+id/supportText" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/support"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
